[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_cpp"
version = "1.0.0"
authors = [
  { name="Robin", email="TODO@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/diatonisk/py_cpp"
"Bug Tracker" = "https://github.com/diatonisk/py_cpp/issues"